--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 <div id="div1"></div>
 <script src="distribution.js"></script>
   </div>
-<div><p>My hypothesis was that as GDP of a country increased so did the prevalence of diabetes.
-  Here I graphed the GDP of a selection of countries against their percentage of the population with diagnosed diabetes and discovered
-  that the trend is opposite.
-  The smaller a countries GDP the more of their population is effected by diabetes. The data however is heavily skewed in the positive direction,
-  there are many more poorer countries then wealthy ones. </p>
+<div><p>My hypothesis was that as GDP of a country increases so would the prevalence of diabetes.
+  Here, I graphed the GDP of a selection of countries against their percentage of the population with diagnosed diabetes and discovered that the trend is opposite to my hypothesis.
+  The smaller a country's GDP, the higher the percentage of the population is effected by diabetes.
+  The data is heavily skewed in the positive direction because there are many more countries with low GDP then there are wealthy ones. </p>
   <a href="RogersChris_CSCI444_Assignment1_Annotated.pdf"><i>Link to Annotated PDF</i></a>
 </div>
 </div>
