--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   The smaller a country's GDP, the higher the percentage of the population is effected by diabetes.
   The data is heavily skewed in the positive direction because there are many more countries with low GDP then there are wealthy ones. </p>
   <a href="RogersChris_CSCI444_Assignment1_Annotated.pdf"><i>Link to Annotated PDF</i></a>
+  <br />
+  <a href="https://data.worldbank.org/indicator/SH.STA.DIAB.ZS?end=2021&start=2021&view=map">Diabetes data</a>
+  <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">GDP data</a>
 </div>
 </div>
 </body>
